ingress-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/backend-protocol":"HTTPS","nginx.ingress.kubernetes.io/ssl-passthrough":"true"},"name":"app-ingress","namespace":"argocd"},"spec":{"ingressClassName":"public","rules":[{"host":"master1-knt-platform-emeralds.northeurope.cloudapp.azure.com","http":{"paths":[{"backend":{"service":{"name":"emeralds-service","port":{"number":9080}}},"p [...]
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  creationTimestamp: "2024-06-20T13:48:20Z"
  generation: 1
  name: app-ingress
  namespace: argocd
  resourceVersion: "2230300"
  uid: 175ec67b-feaa-46fc-8b27-6d589f69f55c
spec:
  ingressClassName: public
  rules:
  - host: master1-knt-platform-emeralds.northeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: emeralds-service
            port:
              number: 9080
        path: /data-broker
        pathType: Prefix
      - backend:
          service:
            name: argocd-server
            port:
              name: https
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - master1-knt-platform-emeralds.northeurope.cloudapp.azure.com
    secretName: argocd-secret
status:
  loadBalancer:
    ingress:
    - ip: 127.0.0.1
